fixed the missing space between number and cart icon

--- a/resources/assets/styles/components/_navigation.scss
+++ b/resources/assets/styles/components/_navigation.scss
@@ -280,6 +280,9 @@
         display: block;
       }
     }
+    &__cart-count {
+      margin-left: 5px;
+    }
    
 }
 
